# Autonomous_RailBot

./: Encoder.ino  README.md  VESC_TOOL.txt  detection.cpp  my_razor.yaml  sensor.launch  state_estimation.launch
Camera/: README.md
GPS Module/: Note.md  README.md
GPS Module/launch/: README.md  ublox_device.launch  zed_f9p.yaml
GPS Module/src/ublox/ublox_gps/launch/: ublox_device.launch
GPS Module/src/ublox_gps/: CMakeLists.txt
GPS Module/src/ublox_gps/include/ublox_gps/: node.h
GPS Module/src/ublox_gps/src/: node.cpp
LORA code/: LORA_conversion.py  README.md
LORA code/LORA_receiver/: LORA_receiver.ino
LORA code/LORA_transmitter/: LORA_transmitter.ino
Lidar/: README.md
Misc/: basic_camera_realsense.rviz
Velodyne VLP16/: README.md
frontend/: README.md  broker-start.bat  dashserve.js  package.json
health_monitor/: CMakeLists.txt  package.xml
health_monitor/launch/: health_monitor.launch
health_monitor/scripts/: health_monitor.py
health_monitor/src/: health_monitor.cpp
lidar_detection/: CMakeLists.txt  package.xml
lidar_detection/src/: detection.cpp  lidar_detection.cpp
mission/: README.md  master.launch
mission/configs/: railbot_mqtt_params.yaml
mission/launch/: master.launch  mission.launch  mqtt.launch
mission/mission/: CMakeLists.txt  package.xml
mission/mission_engine/: CMakeLists.txt  README.md
mission/mission_engine/launch/: mission.launch
mission/mission_engine/missions/: constants.py  mission0.txt  missionwriter.py
mission/mission_engine/scripts/: conversion.py  mission_engine.py  mission_rewriter.py  motor_control_compatFSM.py
mission/mqtt_bridge/: dev-requirements.txt
mission/mqtt_bridge/config/: railbot_mqtt_params.yaml
mission/ros-externals/: constants.py  missionwriter.py
mission/ros2mqtt/: CMakeLists.txt  package.xml
mission/src/mission_engine/: CMakeLists.txt  package.xml
mission/src/mission_engine/scripts/: .listener.py.swp  conversion.py  mission_engine.py  mission_rewriter.py
mission/src/ros2mqtt/: Conversion.py
mission/src/ros2mqtt/scripts/: listener.py  talker.py
motor_control/: CMakeLists.txt  package.xml
motor_control/launch/: motor_control.launch
motor_control/scripts/: motor_control_logic.py  velocity_to_PWM.py
mqtt_bridge/: CMakeLists.txt  dev-requirements.txt
mqtt_bridge/config/: railbot_mqtt_params.yaml
mqtt_bridge/launch/: mqtt.launch
mqtt_bridge_p3/config/: railbot_mqtt_params.yaml
ntripclient/: ntripclient.c  startntripclient.sh
sensor/: README.md
sensor/razor_imu_9dof/: package.xml
sensor/razor_imu_9dof/launch/: razor-pub-and-display.launch  razor-pub-diags.launch  razor-pub.launch
sensor/realsense2_camera/launch/: rs_camera.launch
sensor/sensor/: CMakeLists.txt  package.xml  package_copy.xml  package_new.xml
sensor/ublox/ublox_gps/: CMakeLists.txt
sensor/ublox_gps/launch/: ublox_device.launch
sensor/velodyne_detection/: CMakeLists.txt  nodelets.xml  package.xml
sensor/velodyne_detection/cfg/: DetectionNode.cfg
sensor/velodyne_detection/include/velodyne_detection/: detection.h  detection_old.h
sensor/velodyne_detection/launch/: detection_node.launch  detection_nodelet.launch
sensor/velodyne_detection/src/: detection.cpp  detection_node.cpp  detection_nodelet.cpp
sensor/velodyne_pointcloud/launch/: VLP16_points.launch
sensor_old/sensor/: package.xml
sensor_old/ublox/ublox_gps/config/: README.md
state_estimation/gps_node/: CMakeLists.txt  package.xml
state_estimation/gps_node/config/: gps_node.yaml
state_estimation/gps_node/launch/: gps_node.launch
state_estimation/robot_localization/launch/: ekf_template.launch  odom_ekf.launch
state_estimation/robot_localization/src/: ros_filter.cpp
state_estimation/state_estimation/: package.xml
state_estimation/state_estimation/config/: background.yaml  ekf_localization.yaml
state_estimation/state_estimation/launch/: background.launch  state_estimation.launch
