<?xml version="1.0"?>

<package format="2">

  <name>sensor</name>

  <version>1.0.0</version>

  <description>Sensor for railbot</description>

  <author>Weirong Yuan</author>

  <maintainer email="yuan161@purdue.edu">Weirong Yuan</maintainer>

  <license>BSD</license>



  <buildtool_depend>catkin</buildtool_depend>



  <exec_depend>ublox_gps</exec_depend>
  <exec_depend>ublox_msgs</exec_depend>
  <exec_depend>ublox_serialization</exec_depend>

  <exec_depend>velodyne_driver</exec_depend>
  <exec_depend>velodyne_laserscan</exec_depend>
  <exec_depend>velodyne_msgs</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>

  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>razor_imu_9dof</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->

  <export>

    <metapackage />

  </export>

</package>
