<?xml version="1.0"?>

<package format="2">

  <name>sensor</name>

  <version>1.0.0</version>

  <description>Sensor for railbot</description>

  <author>Weirong Yuan</author>

  <maintainer email="yuan161@purdue.edu">Weirong Yuan</maintainer>

  <license>BSD</license>



  <buildtool_depend>catkin</buildtool_depend>



  <exec_depend>ublox</exec_depend>

  <exec_depend>velodyn</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->

  <export>

    <metapackage />

  </export>

</package>